fixed cache init errors
