# src/schemas/auth.ts
@@ -15,5 +15,13 @@ export const authLoginResponseSchema = z.object({
     user: userResponseSchema
 });
 
+
+export const authVerifySchema = z.object({
+    email: z.string().email({ message: "Invalid email address" }),
+    otpCode: z.string()
+});
+
+
 export type AuthLoginRequestType = ReturnType<typeof authLoginRequestSchema.parse>;
 export type AuthLoginResponseType = ReturnType<typeof authLoginResponseSchema.parse>;
+export type AuthVerifyType = ReturnType<typeof authVerifySchema.parse>;
